<resources>
    <string name="app_name">Friends</string>
    <string name="add_event">Add Event</string>
    <string name="create_meet">Create Meet Up</string>
    <string name="tell_us_about_event">Tell us something about the event</string>
    <string name="category_prompt">Select Category</string>
    <string name="age_prompt">Select Age</string>
    <string name="backdrop_title">Person Name</string>
    <string name="backdrop_subtitle">Place, Location</string>
    <string name="attending_peoples">Peoples are attending</string>
    <string name="nearby">Nearby</string>
    <string name="friends">Friends</string>
    <string name="discover">Discover</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>


    <string-array name="category_array">
        <item>Select Category</item>
        <item>Friend</item>
        <item>Close Friend</item>
        <item>People</item>
        <item>Friend of Friend</item>
        <item>Relative</item>
    </string-array>


</resources>
