<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/symbol_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/nearby_map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_on_white_24dp"
                android:onClick="onIconClick"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/followers_map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people_outline_white_24dp"
                android:onClick="onIconClick"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/discover_map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_my_location_white_24dp"
                android:onClick="onIconClick"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/favourites_map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_message_white_24dp"
                android:onClick="onIconClick"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/profile_map_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_perm_identity_white_24dp"
                android:onClick="onIconClick"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:background="@color/sky_blue"
        android:layout_below="@+id/symbol_icon">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nearby"
                android:textSize="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textColor="@color/white"
                android:textSize="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/discover"
                android:textSize="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:textColor="@color/white"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/profile"
                android:textSize="10dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>